構造作成①　”熱源サービス/マッケイ/OH作業手順、点検方法”　まで

--- a/app/views/curriculums/index_main.html.erb
+++ b/app/views/curriculums/index_main.html.erb
@@ -1,1 +1,6 @@
-熱源サービス支援ソフト
+熱源サービス支援ソフト<br>
+
+<%= link_to '熱源サービス', '/curriculums/kishu_list' %><br>
+<%= link_to '見積作成', '/curriculums' %><br>
+<%= link_to '熱源 技術資料検索', '/curriculums' %><br>
+<%= link_to '不具合事例', '/curriculums' %><br>
