ちょこっと修正

--- a/app/views/curriculums/index_main.html.erb
+++ b/app/views/curriculums/index_main.html.erb
@@ -1,4 +1,4 @@
-熱源サービス支援ソフト<br>
+熱源サービス支援ソフト<br><br>
 
 <%= link_to '熱源サービス', '/curriculums/kishu_list' %><br>
 <%= link_to '見積作成', '/curriculums' %><br>
