--- a/app/views/curriculums/mcquay.html.erb
+++ b/app/views/curriculums/mcquay.html.erb
@@ -1,4 +1,4 @@
-マッケイターボ
+マッケイターボ<br>
 
 <%= link_to 'OH作業手順', '/curriculums/mcquay/oh' %><br>
 <%= link_to '点検方法', '/curriculums/mcquay/tenken' %><br>
