--- a/app/views/curriculums/mcquayoh.html.erb
+++ b/app/views/curriculums/mcquayoh.html.erb
@@ -14,3 +14,22 @@
     </tr>
   </thead>
 
+  <tbody>
+    <% @curriculums.each do |curriculum| %>
+      <tr>
+        <td><%= curriculum.title %></td>
+        <td><%= curriculum.body %></td>
+        <td><%= curriculum.image %></td>
+        <td><%= curriculum.check %></td>
+        <td><%= curriculum.user_id %></td>
+        <td><%= link_to 'Show', curriculum %></td>
+        <td><%= link_to 'Edit', edit_curriculum_path(curriculum) %></td>
+        <td><%= link_to 'Destroy', curriculum, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Curriculum', new_curriculum_path %>
